--- a/AirHockey/Base.lproj/Main.storyboard
+++ b/AirHockey/Base.lproj/Main.storyboard
@@ -5,7 +5,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Image references" minToolsVersion="12.0"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -51,9 +50,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="Pvi-Pm-L7w">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="Pvi-Pm-L7w">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="P1" translatesAutoresizingMaskIntoConstraints="NO" id="dX5-FK-2PW" customClass="Paddle" customModule="AirHockey" customModuleProvider="target">
                                 <rect key="frame" x="176" y="709" width="62" height="60"/>
@@ -80,24 +78,28 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IPU-7X-HAa">
-                                <rect key="frame" x="363" y="416" width="41" height="62"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IPU-7X-HAa">
+                                <rect key="frame" x="363" y="388" width="41" height="120"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="100"/>
                                 <state key="normal">
                                     <imageReference key="image" image="pause.fill" catalog="system" symbolScale="large"/>
                                     <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
                                 </state>
                                 <connections>
-                                    <segue destination="4Tu-lE-BXS" kind="presentation" id="JLp-px-H4I"/>
+                                    <segue destination="4Tu-lE-BXS" kind="presentation" modalPresentationStyle="overCurrentContext" modalTransitionStyle="crossDissolve" id="JLp-px-H4I"/>
                                 </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="eb2-GW-phh"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="eb2-GW-phh" firstAttribute="trailing" secondItem="IPU-7X-HAa" secondAttribute="trailing" constant="10" id="YGl-Ba-ket"/>
-                            <constraint firstItem="IPU-7X-HAa" firstAttribute="centerY" secondItem="Nr8-mR-06v" secondAttribute="centerY" id="riK-ba-MA9"/>
-                            <constraint firstItem="IPU-7X-HAa" firstAttribute="top" secondItem="eb2-GW-phh" secondAttribute="top" constant="374" id="s03-Ft-5T0"/>
+                            <constraint firstItem="Pvi-Pm-L7w" firstAttribute="trailing" secondItem="eb2-GW-phh" secondAttribute="trailing" id="EBb-Xg-IVj"/>
+                            <constraint firstItem="eb2-GW-phh" firstAttribute="trailing" secondItem="IPU-7X-HAa" secondAttribute="trailing" constant="10" id="GYT-qc-zeQ"/>
+                            <constraint firstItem="IPU-7X-HAa" firstAttribute="leading" secondItem="eb2-GW-phh" secondAttribute="leading" constant="363" id="RZP-ew-pfB"/>
+                            <constraint firstItem="Pvi-Pm-L7w" firstAttribute="top" secondItem="eb2-GW-phh" secondAttribute="top" id="eak-Op-MqK"/>
+                            <constraint firstItem="Pvi-Pm-L7w" firstAttribute="leading" secondItem="eb2-GW-phh" secondAttribute="leading" id="iU7-9A-ycn"/>
+                            <constraint firstItem="Pvi-Pm-L7w" firstAttribute="bottom" secondItem="eb2-GW-phh" secondAttribute="bottom" id="mYX-Nk-cUe"/>
+                            <constraint firstItem="IPU-7X-HAa" firstAttribute="centerY" secondItem="Nr8-mR-06v" secondAttribute="centerY" id="vsy-Lz-Qgg"/>
                         </constraints>
                     </view>
                     <connections>
@@ -127,21 +129,76 @@
             <objects>
                 <viewController id="4Tu-lE-BXS" customClass="PauseViewController" customModule="AirHockey" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" opaque="NO" contentMode="scaleToFill" id="l9h-uT-cfn">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="I am a pause screen. Please populate me." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FMS-i2-0MP">
-                                <rect key="frame" x="50" y="392" width="315" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" name="AccentColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Pxg-kW-TdH">
+                                <rect key="frame" x="30" y="74" width="354" height="668"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PAUSED" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cnE-lI-ycM">
+                                        <rect key="frame" x="0.0" y="0.0" width="354" height="125.5"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0 - 0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kW8-bz-59K">
+                                        <rect key="frame" x="0.0" y="135.5" width="354" height="125.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="1wf-Oh-LJl">
+                                        <rect key="frame" x="0.0" y="271" width="354" height="126"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RsA-wm-zD2">
+                                                <rect key="frame" x="0.0" y="0.0" width="172" height="126"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                                <state key="normal" title="Resume"/>
+                                                <connections>
+                                                    <segue destination="7FR-1l-i0o" kind="unwind" unwindAction="continueGameWithUnwindSegue:" id="deT-U9-lEN"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Fs-Ej-u2S">
+                                                <rect key="frame" x="182" y="0.0" width="172" height="126"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                                <state key="normal" title="Restart"/>
+                                                <connections>
+                                                    <segue destination="7FR-1l-i0o" kind="unwind" unwindAction="newGameWithUnwindSegue:" id="0fd-De-caP"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0NP-5v-yjY">
+                                        <rect key="frame" x="0.0" y="407" width="354" height="125.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <state key="normal" title="Settings"/>
+                                        <connections>
+                                            <segue destination="mzP-54-Y1l" kind="presentation" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="HTd-1h-fgh"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4x1-zx-R3O">
+                                        <rect key="frame" x="0.0" y="542.5" width="354" height="125.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <state key="normal" title="Return to Home"/>
+                                        <connections>
+                                            <segue destination="7FR-1l-i0o" kind="unwind" unwindAction="homeWithUnwindSegue:" id="B6g-Np-IHT"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="EdT-Ii-kTu"/>
+                        <color key="backgroundColor" red="0.99990588426589966" green="1" blue="0.99987310171127319" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="EdT-Ii-kTu" firstAttribute="bottom" secondItem="Pxg-kW-TdH" secondAttribute="bottom" constant="120" id="9IL-bp-ddf"/>
+                            <constraint firstItem="EdT-Ii-kTu" firstAttribute="trailing" secondItem="Pxg-kW-TdH" secondAttribute="trailing" constant="30" id="Z4q-h7-7cH"/>
+                            <constraint firstItem="Pxg-kW-TdH" firstAttribute="top" secondItem="EdT-Ii-kTu" secondAttribute="top" constant="30" id="oj2-dp-t1k"/>
+                            <constraint firstItem="Pxg-kW-TdH" firstAttribute="leading" secondItem="EdT-Ii-kTu" secondAttribute="leading" constant="30" id="pWy-EQ-kaY"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IZc-vR-Qg6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="7FR-1l-i0o" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1234.7826086956522" y="-17.410714285714285"/>
         </scene>
@@ -181,9 +238,6 @@
         <image name="P1" width="468" height="468"/>
         <image name="P2" width="468" height="468"/>
         <image name="pause.fill" catalog="system" width="116" height="128"/>
-        <namedColor name="AccentColor">
-            <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
